--- a/templates/main.html
+++ b/templates/main.html
@@ -2,197 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-
-        .bg {
-            background-image: url('{% static 'img/background.jpg'%}');
-            height: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
-        }
-
-
-        * {
-            box-sizing: border-box;
-        }
-
-        .content {
-            position: absolute;
-            right: 0;
-            height: 100%;
-            width: 50%;
-            background: rgb(0, 0, 0);
-            background: rgba(255, 255, 255);
-            overflow: auto;
-            padding: 5%;
-
-        }
-
-        .text {
-            color: #4d5258;
-            font-family: 'Open Sans', sans-serif;
-            line-height: 1.6;
-            font-size: 16px;
-            text-align: justify;
-        }
-
-        h1 {
-            font-size: 38px;
-            font-family: 'DM Serif Display', serif;
-            font-weight: bolder;
-            text-align: left;
-            line-height: normal;
-            color: #283e9b;
-        }
-
-        .button {
-            position: absolute;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #283e9b;
-            border-radius: 20px;
-            border-style: none;
-            box-sizing: border-box;
-            color: #FFFFFF;
-            cursor: pointer;
-            display: inline-block;
-            font-family: 'Open Sans', sans-serif;
-            font-size: 16px;
-            height: 40px;
-            line-height: 20px;
-            list-style: none;
-            margin-top: 20px;
-            outline: none;
-            padding: 10px 16px;
-            text-align: center;
-            text-decoration: none;
-            transition: color 100ms;
-            vertical-align: baseline;
-            user-select: none;
-            -webkit-user-select: none;
-            {#touch-action: manipulation;#}
-        }
-
-        .button:hover,
-        .button:focus {
-            background-color: #324EC4;
-        }
-
-
-        @media only screen
-        and (max-device-height: 420px)
-        and (-webkit-min-device-pixel-ratio: 2)
-        and (orientation: landscape) {
-            h1 {
-                font-size: 3vw;
-            }
-
-            .content {
-                width: 75%;
-            }
-
-            .text {
-                padding-left: 5%;
-                padding-right: 5%;
-                text-align: left;
-            }
-
-        }
-
-        @media only screen
-        and (max-device-width: 920px)
-        and (-webkit-min-device-pixel-ratio: 2)
-        and (orientation: portrait) {
-            .content {
-                width: 100%;
-            }
-
-            .text {
-                font-size: 3vw;
-                padding-left: 5%;
-                padding-right: 5%;
-                text-align: left;
-            }
-
-            h1 {
-                font-size: 8vw;
-            }
-
-            .button {
-                font-size: 40px;
-                padding: 20px;
-                height: 5%;
-                width: 45%;
-                border-radius: 50px;
-                margin: auto;
-            }
-
-        }
-
-        @media only screen
-        and (min-device-width: 481px)
-        and (max-device-width: 1024px)
-        and (orientation: portrait) {
-            h1 {
-                font-size: 6vw;
-            }
-
-            .text {
-                font-size: 3vw;
-                padding-left: 5%;
-                padding-right: 5%;
-                text-align: left;
-            }
-
-             .button {
-                font-size: 40px;
-                padding: 20px;
-                height: 5%;
-                width: 45%;
-                border-radius: 50px;
-                margin: auto;
-            }
-        }
-
-        @media only screen
-        and (min-device-width: 481px)
-        and (max-device-width: 1024px)
-        and (orientation: landscape) {
-            h1 {
-                font-size: 3vw;
-            }
-
-            .text {
-                padding-left: 5%;
-                padding-right: 5%;
-                text-align: left;
-            }
-
-            .content {
-                width: 75%;
-            }
-
-        }
-    </style>
     <meta charset="UTF-8">
     <title>Teleporada | Ankieta</title>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="stylesheet" href="{% static 'main.css' %}"/>
 </head>
 <div class="bg">
     <div class="content">
         <div class="text">
             <h1>Wpływ teleporady na&nbsp;jakość świadczonych usług medycznych w&nbsp;ocenie pacjentów
                 oraz&nbsp;lekarzy</h1>
-            <p>Jesteśmy studentami Politechniki Gdańskiej na kierunku Inżynieria Biomedyczna. W&nbsp;ramach przedmiotów
+            <p>Jestem studentką Politechniki Gdańskiej na kierunku Inżynieria Biomedyczna. W&nbsp;ramach przedmiotów
                 Rozwój Aplikacji Internetowych w&nbsp;Medycynie oraz&nbsp;Hurtownie i&nbsp;Eksploracja Danych stworzono
                 poniższą
                 ankietę w celu zbadania wpływu teleporady na jakość świadczonych usług medycznych. Ankieta jest
