--- a/templates/thankYou.html
+++ b/templates/thankYou.html
@@ -4,96 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-
-        .bg {
-            background-image: url('{% static 'img/background.jpg'%}');
-            height: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
-        }
-
-        * {
-            box-sizing: border-box;
-        }
-
-        .content {
-            position: absolute;
-            left: 0;
-            height: 100%;
-            width: 50%;
-            background: rgb(0, 0, 0);
-            background: rgba(255, 255, 255);
-        }
-
-        .text {
-            color: #4d5258;
-            padding-left: 9%;
-            padding-top: 25%;
-            padding-right: 9%;
-            font-family: 'Open Sans', sans-serif;
-            line-height: 1.6;
-            font-size: 16px;
-            top: 50%;
-        }
-
-        h1 {
-            font-size: 38px;
-            font-family: 'DM Serif Display', serif;
-            font-weight: bolder;
-            text-align: left;
-            line-height: normal;
-            color: #283e9b;
-        }
-
-        @media only screen
-        and (max-device-width: 480px)
-        and (-webkit-min-device-pixel-ratio: 2)
-        and (orientation: portrait) {
-            .content {
-                width: 100%;
-            }
-
-            .text {
-                font-size: 40px;
-            }
-
-            h1 {
-                font-size: 70px;
-            }
-        }
-        @media only screen
-        and (min-device-width: 480px)
-        and (max-device-width: 1024px)
-        and (orientation: portrait) {
-            .content{
-                width: 100%
-            }
-            .text {
-               font-size: 40px
-            }
-            h1 {
-                font-size: 70px;
-            }
-        }
-
-    </style>
+    <link rel="stylesheet" href="{% static 'main.css' %}"/>
     <title>Teleporada | Ankieta</title>
 </head>
 <div class="bg">
     <div class="content">
         <div class="text">
-<h1>Dziękujemy za wypełnienie ankiety!</h1>
-<h2>Przeanalizowane dane wraz z&nbsp;wnioskami zostaną udostępnione na&nbsp;stronie w&nbsp;dniu 19.05.2022 r.</h2>
-</div>
+            <h1>Dziękuję za wypełnienie ankiety!</h1>
+            <h2>Przeanalizowane dane wraz z&nbsp;wnioskami zostaną udostępnione na&nbsp;stronie w&nbsp;dniu 19.05.2022
+                r.</h2>
+        </div>
     </div>
 </div>
 </html>
